--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 authors = ["aston <astonbitecode@gmail.com>"]
 
 [dependencies]
-rust_keylock = { path = "../rust-keylock-lib" }
+rust_keylock = { git = "https://github.com/rust-keylock/rust-keylock-lib", rev = "HEAD" }
 log = "0.3"
 fern = "0.3"
 chrono = "0.2"
