--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,19 @@
 name = "rust_keylock_shell"
 version = "0.2.0"
 authors = ["aston <astonbitecode@gmail.com>"]
+description = "Shell access to the rust-keylock. rust-keylock is a password manager with goals to be Secure, Simple to use, Portable and Extensible."
+keywords = ["password", "manager", "safe", "encryption", "key"]
+license = "GPL-3.0"
+repository = "https://github.com/rust-keylock/rust-keylock-shell"
+homepage = "https://rust-keylock.github.io/"
+readme = "README.md"
+categories = ["cryptography", "authentication"]
+
+[badges]
+travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" }
 
 [dependencies]
-rust_keylock = { git = "https://github.com/rust-keylock/rust-keylock-lib", tag = "v0.2.0" }
+rust_keylock = "0.2"
 log = "0.3"
 fern = "0.3"
 chrono = "0.2"
