--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_keylock_shell"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["aston <astonbitecode@gmail.com>"]
 description = "Shell access to the rust-keylock. rust-keylock is a password manager with goals to be Secure, Simple to use, Portable and Extensible."
 keywords = ["password", "manager", "safe", "encryption", "key"]
@@ -14,10 +14,10 @@ categories = ["cryptography", "authentication"]
 travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" }
 
 [dependencies]
-rust_keylock = "0.2.1"
+rust_keylock = { git = "https://github.com/rust-keylock/rust-keylock-lib", rev = "HEAD" }
 log = "0.3"
 fern = "0.3"
-chrono = "0.2"
+chrono = "0.3"
 rpassword = "0.3"
 
 [[bin]]
