--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,10 @@ travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" 
 [dependencies]
 rust_keylock = { git = "https://github.com/rust-keylock/rust-keylock-lib", rev = "HEAD" }
 log = "0.3"
-fern = "0.3"
+fern = "0.4"
 chrono = "0.3"
-rpassword = "0.3"
+rpassword = "0.4"
 
 [[bin]]
 name = "rust-keylock"
+path = "src/main.rs"
