--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/rust-keylock/rust-keylock-shell"
 homepage = "https://rust-keylock.github.io/"
 readme = "README.md"
 categories = ["cryptography", "authentication"]
+edition = "2015"
 
 [badges]
 travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" }
