--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_keylock_shell"
-version = "0.7.0"
+version = "0.8.0"
 authors = ["aston <astonbitecode@gmail.com>"]
 description = "Shell access to the rust-keylock. rust-keylock is a password manager with goals to be Secure, Simple to use, Portable and Extensible."
 keywords = ["password", "manager", "safe", "encryption", "key"]
@@ -15,11 +15,11 @@ edition = "2018"
 travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" }
 
 [dependencies]
-rust_keylock = "0.7"
-log = "0.3"
-fern = "0.4"
-chrono = "0.3"
-rpassword = "0.4"
+rust_keylock = {git = "https://github.com/rust-keylock/rust-keylock-lib"}
+log = "0.4"
+fern = "0.5"
+chrono = "0.4"
+rpassword = "2.1"
 
 [[bin]]
 name = "rust-keylock"
