--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
-language: rust
+dist: xenial
+language: java
 rust:
   - stable
   - beta
   - nightly
+jdk:
+  - openjdk11
 matrix:
   allow_failures:
     - rust: nightly
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y libxcb-shape0 libxcb-shape0-dev libxcb-xfixes0 libxcb-xfixes0-dev
+  - curl https://sh.rustup.rs -sSf | sh -s -- -y
+  - source ~/.cargo/env
+sudo: required
+script:
+  - cargo test
