--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ edition = "2018"
 travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" }
 
 [dependencies]
-rust_keylock = {git = "https://github.com/rust-keylock/rust-keylock-lib.git"}
+rust_keylock = "0.13"
 log = "0.4"
 fern = "0.6"
 chrono = "0.4"
