--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_keylock_shell"
-version = "0.14.0"
+version = "0.15.0"
 authors = ["aston <astonbitecode@gmail.com>"]
 description = "Shell access to the rust-keylock. rust-keylock is a password manager with goals to be Secure, Simple to use, Portable and Extensible."
 keywords = ["password", "manager", "safe", "encryption", "key"]
@@ -9,19 +9,19 @@ repository = "https://github.com/rust-keylock/rust-keylock-shell"
 homepage = "https://rust-keylock.github.io/"
 readme = "README.md"
 categories = ["cryptography", "authentication"]
-edition = "2018"
+edition = "2021"
 
 [badges]
 travis-ci = { repository = "rust-keylock/rust-keylock-shell", branch = "master" }
 
 [dependencies]
-rust_keylock = "0.14"
+rust_keylock = {git = "https://github.com/rust-keylock/rust-keylock-lib"}
 log = "0.4"
 fern = "0.6"
 chrono = "0.4"
-rpassword = "5.0"
-webbrowser = "0.5"
-termcolor = "1.1"
+rpassword = "7.2"
+webbrowser = "0.8"
+termcolor = "1.3"
 
 [[bin]]
 name = "rust-keylock"
